# e-learning

./: .gitignore  ARCHITECTURE.md  DEV_NOTES.md  DEV_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  MAKEFILE_UPDATE.md  Makefile  QUICKSTART.md  README.md  add-new-feature.md  class_diagram.md  class_methods_grouping.md  commit.md  exam-exercise-feedback.md  game-usecases.md  login-logout-heartbeat-gracequit-diagram.md  logs.md  naming_convention_plan.md  project-tree.md  run.sh  run_mac.sh  user.md
data/: users.txt
database/: Makefile  README.md  all_extra_seeds.sql  chat_messages.sql  clear_results.sql  database.cpp  database.h  delete_db.sql  extra_seed_games.sql  extra_seed_grammar.sql  extra_seed_prefix.sql  extra_seed_today.sql  games_seed.sql  get_accounts.sh  init_db.sql  main.cpp  patch_game_items_correct_json.sql  patch_mock_exercise.sql  patch_mock_games.sql  patch_results_add_user_answer.sql  patch_results_allow_game.sql  reinit_chat.sql  sample_lessons.sql  seed.sql  seed_backup_orig.sql  seed_data.py  (+6 more)
src/client/gui/: AdminGameEditScreen.qml  AdminGameScreen.qml  CMakeLists.txt  ChatScreen.qml  Dashboard.qml  DoExerciseScreen.qml  ExamListScreen.qml  ExerciseListScreen.qml  FeedbackScreen.qml  GameLevelScreen.qml  GameListScreen.qml  GamePlayScreen.qml  GradingListScreen.qml  GradingScreen.qml  Header.qml  LessonListScreen.qml  LessonStudyScreen.qml  NetworkManager.cpp  NetworkManager.h  ResultDetailScreen.qml  ResultListScreen.qml  SettingsScreen.qml  Style.qml  TeacherDashboard.qml  UserPreferences.qml  main.cpp  main.qml  qmldir
(+127 files in other folders)
